# mvlg

./: .gitmodules  CMakeLists.txt  ReadMe.md
Examples/ComputeShader/: FunctionLoader.cpp  main.cpp  test.cpp  utils.cpp  utils.hpp
Examples/MuVk/: CreateInfo.h  Debugger.h  FileLoader.h  MuVk.h  Proxy.h  Query.h  Readable.h  Utils.h
include/mvlg/: mvlg.h
shader/: bug.bat  bug.comp  bug.comp.spv  bug.comp.spv.yml  frag.bat  frag.shader  frag.shader.spv.yml  index.bat  index.comp  index.comp.spv  index.comp.spv.yml  multiply-compiled.comp  multiply.bat  multiply.comp  multiply.spv  multiply.spv.yml  triangle.bat  triangle.frag.spv.yml  triangle.shader  triangle.shader.frag.spv.yml  triangle.shader.vert.spv.yml  triangle.vert.spv.yml  vert.bat  vert.shader  vert.shader.spv.yml  vkrefl.bat  vkrefl.comp  vkrefl.comp.spv  vkrefl.comp.spv.yml
src/: mvlg.cpp
